[gd_scene load_steps=12 format=3 uid="uid://boethpl6sm42y"]

[ext_resource type="Script" path="res://ui.gd" id="1_emxbs"]
[ext_resource type="Texture2D" uid="uid://bnhdxh1g3spyv" path="res://Screens/UI_WhiteSquare.png" id="2_eesx6"]
[ext_resource type="FontFile" uid="uid://tryh26uqjs6o" path="res://Font/lilita_one_regular.ttf" id="2_jr43m"]
[ext_resource type="AudioStream" uid="uid://ceyp34p46m2bt" path="res://Sounds/Menu.mp3" id="3_xjckl"]
[ext_resource type="Script" path="res://win_screen.gd" id="4_ckbov"]
[ext_resource type="Script" path="res://pause_screen.gd" id="4_dxmui"]
[ext_resource type="AudioStream" uid="uid://cb3ewunqlfmgi" path="res://Sounds/GameOver.ogg" id="8_wo8ix"]
[ext_resource type="AudioStream" uid="uid://bhemwiqefrlgo" path="res://Sounds/Woodland Fantasy.mp3" id="9_pyiuq"]

[sub_resource type="InputEventMouseButton" id="InputEventMouseButton_4rtos"]
pressed = true

[sub_resource type="Shortcut" id="Shortcut_75r3j"]
events = [SubResource("InputEventMouseButton_4rtos")]

[sub_resource type="LabelSettings" id="LabelSettings_5mepd"]
font = ExtResource("2_jr43m")
font_size = 45
font_color = Color(0.619608, 0.513726, 0.0588235, 1)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_emxbs")

[node name="PauseScreen" type="CanvasLayer" parent="."]
layer = 5
script = ExtResource("4_dxmui")

[node name="Menu" type="ColorRect" parent="PauseScreen"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.298039, 0.537255, 1)

[node name="MenuMusic" type="AudioStreamPlayer3D" parent="PauseScreen/Menu"]
stream = ExtResource("3_xjckl")
volume_db = 2.0
max_db = 4.0

[node name="Proceed" type="Button" parent="PauseScreen/Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.841
anchor_right = 0.5
anchor_bottom = 0.948
offset_left = -176.0
offset_top = -0.968018
offset_right = 174.0
offset_bottom = -0.304077
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_jr43m")
theme_override_font_sizes/font_size = 36
shortcut = SubResource("Shortcut_75r3j")
text = "Proceed to Game"

[node name="RichTextLabel" type="RichTextLabel" parent="PauseScreen/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -505.0
offset_top = -220.0
offset_right = -176.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.737255, 0.737255, 0.737255, 1)
theme_override_fonts/normal_font = ExtResource("2_jr43m")
theme_override_font_sizes/normal_font_size = 42
text = "Controls

Movement:

W: Move Forward
A: Move Left
S: Move Back
D: Move Right
Spacebar: Jump
"
fit_content = true

[node name="RichTextLabel2" type="RichTextLabel" parent="PauseScreen/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -122.0
offset_right = 567.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.737255, 0.737255, 0.737255, 1)
theme_override_fonts/normal_font = ExtResource("2_jr43m")
theme_override_font_sizes/normal_font_size = 42
text = "Other Actions:

ESC: Pause
Left Mouse Click: Attack 
Mouse Movement: Camera Control"
fit_content = true

[node name="Title" type="RichTextLabel" parent="PauseScreen/Menu"]
layout_mode = 0
offset_left = 71.0
offset_top = 24.0
offset_right = 1030.0
offset_bottom = 104.0
theme_override_fonts/normal_font = ExtResource("2_jr43m")
theme_override_font_sizes/normal_font_size = 50
text = "Defeat ghosts and gather golden skills"

[node name="Reset" type="Button" parent="PauseScreen/Menu"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.012
anchor_bottom = -0.012
offset_left = 959.0
offset_top = 559.776
offset_right = 1070.0
offset_bottom = 605.776
theme_override_fonts/font = ExtResource("2_jr43m")
theme_override_font_sizes/font_size = 32
text = "Reset"
flat = true

[node name="WinScreen" type="CanvasLayer" parent="."]
layer = 5
visible = false
script = ExtResource("4_ckbov")

[node name="Menu" type="ColorRect" parent="WinScreen"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.333333, 0.27451, 0.454902, 1)

[node name="MenuMusic" type="AudioStreamPlayer3D" parent="WinScreen/Menu"]
stream = ExtResource("3_xjckl")
volume_db = 2.0
max_db = 4.0

[node name="Proceed" type="Button" parent="WinScreen/Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.841
anchor_right = 0.5
anchor_bottom = 0.948
offset_left = -176.0
offset_top = -0.968018
offset_right = 174.0
offset_bottom = -0.304077
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_jr43m")
theme_override_font_sizes/font_size = 36
shortcut = SubResource("Shortcut_75r3j")
text = "Proceed to Menu"

[node name="RichTextLabel2" type="RichTextLabel" parent="WinScreen/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -513.0
offset_top = -228.0
offset_right = 159.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.737255, 0.737255, 0.737255, 1)
theme_override_fonts/normal_font = ExtResource("2_jr43m")
theme_override_font_sizes/normal_font_size = 42
text = "Let's review the skills you found:

Godot
HTML5
Javascript
Jquery
Laravel

Please see my resume for full details."
fit_content = true

[node name="RichTextLabel3" type="RichTextLabel" parent="WinScreen/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 295.0
offset_top = -122.0
offset_right = 775.0
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.737255, 0.737255, 0.737255, 1)
theme_override_fonts/normal_font = ExtResource("2_jr43m")
theme_override_font_sizes/normal_font_size = 42
text = "React
React Native
SCSS
Typescript"
fit_content = true

[node name="RichTextLabel4" type="RichTextLabel" parent="WinScreen/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -124.0
offset_right = 127.0
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.737255, 0.737255, 0.737255, 1)
theme_override_fonts/normal_font = ExtResource("2_jr43m")
theme_override_font_sizes/normal_font_size = 42
text = "Liquid
MongoDB
MySQL
NodeJS
PHP"
fit_content = true

[node name="Title" type="RichTextLabel" parent="WinScreen/Menu"]
layout_mode = 0
offset_left = 63.0
offset_top = 24.0
offset_right = 1030.0
offset_bottom = 104.0
theme_override_fonts/normal_font = ExtResource("2_jr43m")
theme_override_font_sizes/normal_font_size = 50
text = "Congratulations, you won!"

[node name="StatusBar" type="Node3D" parent="."]

[node name="HealthBar" type="TextureProgressBar" parent="StatusBar"]
z_index = 1
offset_left = 15.0
offset_top = 582.0
offset_right = 275.0
offset_bottom = 630.0
nine_patch_stretch = true
texture_under = ExtResource("2_eesx6")
texture_progress = ExtResource("2_eesx6")
tint_under = Color(0.254902, 0.254902, 0.254902, 1)
tint_progress = Color(1, 0, 0, 1)

[node name="Skills" type="Label" parent="StatusBar"]
offset_left = 1004.0
offset_top = 585.0
offset_right = 1136.0
offset_bottom = 654.0
text = "14 / 14"
label_settings = SubResource("LabelSettings_5mepd")

[node name="BackgroundNoise" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_pyiuq")
volume_db = -1.0
max_db = 2.0

[node name="PlayerDeath" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_wo8ix")

[connection signal="pressed" from="PauseScreen/Menu/Proceed" to="PauseScreen" method="_on_proceed_pressed"]
[connection signal="pressed" from="PauseScreen/Menu/Reset" to="PauseScreen" method="_on_restart_pressed"]
[connection signal="pressed" from="WinScreen/Menu/Proceed" to="WinScreen" method="_on_proceed_pressed"]
